--- a/Cyberpalata.DataProvider/Cyberpalata.DataProvider.csproj
+++ b/Cyberpalata.DataProvider/Cyberpalata.DataProvider.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Cyberpalata.Common\Cyberpalata.Common.csproj" />
+  </ItemGroup>
+
 </Project>
