--- a/Cyberpalata.WebApi/appsettings.json
+++ b/Cyberpalata.WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "CyberpalataConnectionString": "Server=(localdb)\\mssqllocaldb;Database=CyberpalataDatabase;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
