Authentication and authorization adding

--- a/Cyberpalata.WebApi/appsettings.json
+++ b/Cyberpalata.WebApi/appsettings.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "CyberpalataConnectionString": "Server=(localdb)\\mssqllocaldb;Database=CyberpalataDatabase;Trusted_Connection=True;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "SecurityKey": "securityKeyCyber",
+    "Issuer": "http://localhost:",
+    "Audience": "http://localhost:3000"
+  }
 }
