--- a/Cyberpalata.WebApi/appsettings.json
+++ b/Cyberpalata.WebApi/appsettings.json
@@ -11,7 +11,7 @@
   "AllowedHosts": "*",
   "Jwt": {
     "SecurityKey": "securityKeyCyber",
-    "Issuer": "http://localhost:",
-    "Audience": "http://localhost:3000"
+    "Issuer": "MyAuthServer",
+    "Audience": "MyAuthClient"
   }
 }
