--- a/Cyberpalata.Website/cyberpalata-web/package.json
+++ b/Cyberpalata.Website/cyberpalata-web/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.3",
+    "jwt-decode": "^3.1.2",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
