--- a/Cyberpalata.WebApi/appsettings.json
+++ b/Cyberpalata.WebApi/appsettings.json
@@ -13,5 +13,12 @@
     "SecurityKey": "securityKeyCyber",
     "Issuer": "MyAuthServer",
     "Audience": "MyAuthClient"
+  },
+  "AccessTokenSettings": {
+    "ExpirationTime": 5
+  },
+  "RefreshTokenSettings": {
+    "ExpirationTime": 2880,
+    "TimeToCheckBeforeRefreshTokenExpired" : 30
   }
 }
