--- a/Cyberpalata.WebApi/appsettings.json
+++ b/Cyberpalata.WebApi/appsettings.json
@@ -15,10 +15,10 @@
     "Audience": "MyAuthClient"
   },
   "AccessTokenSettings": {
-    "ExpirationTime": 5
+    "ExpirationTimeMin": 5
   },
   "RefreshTokenSettings": {
-    "ExpirationTime": 2880,
-    "TimeToCheckBeforeRefreshTokenExpired" : 30
+    "ExpirationTimeMin": 2880,
+    "TimeToCheckBeforeRefreshTokenExpiredMin" : 30
   }
 }
