Booking relationships fixing

--- a/Cyberpalata.WebApi/appsettings.json
+++ b/Cyberpalata.WebApi/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "CyberpalataConnectionString": "Server=(localdb)\\mssqllocaldb;Database=CyberpalataDatabase;Trusted_Connection=True;"
+    "CyberpalataConnectionString": "Server=(localdb)\\\\mssqllocaldb;Database=CyberpalataDatabase;Trusted_Connection=True;"
   },
   "AllowedHosts": "*",
   "Jwt": {
