--- a/Cyberpalata.WebApi/appsettings.Development.json
+++ b/Cyberpalata.WebApi/appsettings.Development.json
@@ -1,8 +1,24 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Trace",
+      "Microsoft.AspNetCore": "Trace"
     }
+  },
+  "ConnectionStrings": {
+    "CyberpalataConnectionString": "Server=(localdb)\\mssqllocaldb;Database=CyberpalataDatabase;Trusted_Connection=True;"
+  },
+  "AllowedHosts": "*",
+  "Jwt": {
+    "SecurityKey": "securityKeyCyber",
+    "Issuer": "MyAuthServer",
+    "Audience": "MyAuthClient"
+  },
+  "AccessTokenSettings": {
+    "ExpirationTimeMin": 5
+  },
+  "RefreshTokenSettings": {
+    "ExpirationTimeMin": 2880,
+    "TimeToCheckBeforeRefreshTokenExpiredMin": 30
   }
 }
