Validation triggers adding

--- a/Cyberpalata.DataProvider/Cyberpalata.DataProvider.csproj
+++ b/Cyberpalata.DataProvider/Cyberpalata.DataProvider.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="CSharpFunctionalExtensions" Version="2.37.0" />
+    <PackageReference Include="EntityFrameworkCore.Triggered" Version="3.2.2" />
     <PackageReference Include="Fody" Version="6.6.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
