--- a/Cyberpalata.WebApi/nlog.config
+++ b/Cyberpalata.WebApi/nlog.config
@@ -1,15 +1,69 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
-	  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	  autoReload="true"
-	  internalLogLevel="Trace"
-	  internalLogFile="D:\Tikhon\Github\Cyberpalata\Logs\internallog\internallog.txt">
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      autoReload="true"
+      throwExceptions="false"
+      internalLogLevel="Off">
+
+  <variable name="logDirectory" value="${basedir}/logs/${shortdate}" />
+
+  <extensions>
+    <add assembly="NLog.Web.AspNetCore"/>
+    <!--<add assembly="NLog.MailKit"/>-->
+    <!--<add assembly="Npgsql.EntityFrameworkCore.PostgreSQL"/>-->
+    <!--<add assembly="Microsoft.EntityFrameworkCore.Sqlite.Core"/>-->
+  </extensions>
+
+
   <targets>
-    <target name="logfile" xsi:type="File"
-				fileName="D:\Tikhon\Github\Cyberpalata\Logs\${shortdate}_logfile.txt"
-				layout="${longdate} ${level:uppercase=true} ${message}"/>
+    <!--Можно разделять по файлам-->      
+    <target xsi:type="File" name="fileLogTrace" fileName="${logDirectory}/nlog-all-${shortdate}.log" deleteOldFileOnStartup="true" concurrentWrites="true" />
+    <target xsi:type="File" name="fileLogDebug" fileName="${logDirectory}/nlog-all-${shortdate}.log" deleteOldFileOnStartup="true" concurrentWrites="true" />
+    <target xsi:type="File" name="fileLogInfo" fileName="${logDirectory}/nlog-all-${shortdate}.log" deleteOldFileOnStartup="true" concurrentWrites="true" />
+    <target xsi:type="File" name="fileLogWarn" fileName="${logDirectory}/nlog-all-${shortdate}.log" deleteOldFileOnStartup="true" concurrentWrites="true" />
+    <target xsi:type="File" name="fileLogErrors" fileName="${logDirectory}/nlog-all-${shortdate}.log" deleteOldFileOnStartup="true" concurrentWrites="true" />
+    <target xsi:type="File" name="fileLogFatal" fileName="${logDirectory}/nlog-all-${shortdate}.log" deleteOldFileOnStartup="true" concurrentWrites="true" />
+ 
+
+    <!--Отправка по почте-->  
+    <!--<target xsi:type="Mail" name="mail"
+            smtpServer="xxxxxxxxxxx"
+            smtpPort="xxx"
+            smtpAuthentication="Basic"
+            smtpUserName="xxxxxxxx"
+            smtpPassword="xxxxxxxxxx"
+            secureSocketOption="StartTls"
+            from="logger@xxxx.xxx" to="xxxx@xxxx.xxx" />-->
+
+    <!--Запись в файл-->  
+    <target xsi:type="File" name="allfile"
+            fileName="${logDirectory}/nlog-all-${shortdate}.log" deleteOldFileOnStartup="true" concurrentWrites="true" />
+
+    <!--Запись в порт-->  
+    <target xsi:type="NLogViewer" name="TcpOutlet" address="tcp4://localhost:4505" />
+
   </targets>
+
   <rules>
-    <logger name="*" minlevel="Debug" writeTo="logfile" />
+    <!--Можно разделять по файлам-->  
+    <logger name="*" level="Trace" writeTo="fileLogTrace" />
+    <logger name="*" level="Debug" writeTo="fileLogDebug" />
+    <logger name="*" level="Info" writeTo="fileLogInfo" />
+    <logger name="*" level="Warn" writeTo="fileLogWarn" />
+    <logger name="*" level="Error" writeTo="fileLogErrors" />
+    <logger name="*" level="Fatal" writeTo="fileLogFatal" />
+
+    <!--На почту-->  
+    <!--<logger name="*" level="Error" writeTo="mail" />-->    
+    
+    <!--В Порт-->  
+    <logger name="*" minlevel="Trace" writeTo="TcpOutlet">
+      <!--<filters>
+        <when condition="contains(logger, 'что-то')" action="Log" />
+        <when condition="contains(logger, 'что-то')" action="Ignore" />
+      </filters>-->
+    </logger>
+    
   </rules>
+
 </nlog>
