Attrriute removing for easely developing

--- a/Cyberpalata.WebApi/nlog.config
+++ b/Cyberpalata.WebApi/nlog.config
@@ -17,27 +17,16 @@
 
   <targets>
     <!--Можно разделять по файлам-->      
-    <target xsi:type="File" name="fileLogTrace" fileName="${logDirectory}/nlog-all-${shortdate}.log" deleteOldFileOnStartup="true" concurrentWrites="true" />
+    <!--<target xsi:type="File" name="fileLogTrace" fileName="${logDirectory}/nlog-all-${shortdate}.log" deleteOldFileOnStartup="true" concurrentWrites="true" />
     <target xsi:type="File" name="fileLogDebug" fileName="${logDirectory}/nlog-all-${shortdate}.log" deleteOldFileOnStartup="true" concurrentWrites="true" />
     <target xsi:type="File" name="fileLogInfo" fileName="${logDirectory}/nlog-all-${shortdate}.log" deleteOldFileOnStartup="true" concurrentWrites="true" />
     <target xsi:type="File" name="fileLogWarn" fileName="${logDirectory}/nlog-all-${shortdate}.log" deleteOldFileOnStartup="true" concurrentWrites="true" />
     <target xsi:type="File" name="fileLogErrors" fileName="${logDirectory}/nlog-all-${shortdate}.log" deleteOldFileOnStartup="true" concurrentWrites="true" />
-    <target xsi:type="File" name="fileLogFatal" fileName="${logDirectory}/nlog-all-${shortdate}.log" deleteOldFileOnStartup="true" concurrentWrites="true" />
+    <target xsi:type="File" name="fileLogFatal" fileName="${logDirectory}/nlog-all-${shortdate}.log" deleteOldFileOnStartup="true" concurrentWrites="true" />-->
  
-
-    <!--Отправка по почте-->  
-    <!--<target xsi:type="Mail" name="mail"
-            smtpServer="xxxxxxxxxxx"
-            smtpPort="xxx"
-            smtpAuthentication="Basic"
-            smtpUserName="xxxxxxxx"
-            smtpPassword="xxxxxxxxxx"
-            secureSocketOption="StartTls"
-            from="logger@xxxx.xxx" to="xxxx@xxxx.xxx" />-->
-
     <!--Запись в файл-->  
-    <target xsi:type="File" name="allfile"
-            fileName="${logDirectory}/nlog-all-${shortdate}.log" deleteOldFileOnStartup="true" concurrentWrites="true" />
+    <!--<target xsi:type="File" name="allfile"
+            fileName="${logDirectory}/nlog-all-${shortdate}.log" deleteOldFileOnStartup="true" concurrentWrites="true" />-->
 
     <!--Запись в порт-->  
     <target xsi:type="NLogViewer" name="TcpOutlet" address="tcp4://localhost:4505" />
@@ -65,5 +54,4 @@
     </logger>
     
   </rules>
-
 </nlog>
