--- a/Cyberpalata.DataProvider/Cyberpalata.DataProvider.csproj
+++ b/Cyberpalata.DataProvider/Cyberpalata.DataProvider.csproj
@@ -31,4 +31,8 @@
     <ProjectReference Include="..\Cyberpalata.Common\Cyberpalata.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
+
 </Project>
