--- a/Cyberpalata.WebApi/appsettings.json
+++ b/Cyberpalata.WebApi/appsettings.json
@@ -19,6 +19,10 @@
   },
   "RefreshTokenSettings": {
     "ExpirationTimeMin": 2880,
-    "TimeToCheckBeforeRefreshTokenExpiredMin" : 30
+    "TimeToCheckBeforeRefreshTokenExpiredMin": 30
+  },
+  "EmailSettings": {
+    "EmailAddress": "cyberpalata@gmail.com",
+    "Password": "ksjvrycqseevupug"
   }
 }
