Gamil one time password changing

--- a/Cyberpalata.WebApi/appsettings.json
+++ b/Cyberpalata.WebApi/appsettings.json
@@ -23,6 +23,6 @@
   },
   "EmailSettings": {
     "EmailAddress": "cyberpalata@gmail.com",
-    "Password": "xcdfdqliazugvety"
+    "Password": "ybnqevsjmxrahlip"
   }
 }
