Pgination settings adding

--- a/Cyberpalata.WebApi/appsettings.json
+++ b/Cyberpalata.WebApi/appsettings.json
@@ -23,6 +23,11 @@
   },
   "EmailSettings": {
     "EmailAddress": "cyberpalata@gmail.com",
-    "Password": "ybnqevsjmxrahlip"
+    "Password": "wjxhfezseywocvfo"
+  },
+  "PaginationSettings": {
+    "bookingByIdPageSize": 3,
+    "bookingPageSize": 10,
+    "defaultPageSize": 10
   }
 }
