Gmail one time token change

--- a/Cyberpalata.WebApi/appsettings.json
+++ b/Cyberpalata.WebApi/appsettings.json
@@ -23,7 +23,7 @@
   },
   "EmailSettings": {
     "EmailAddress": "cyberpalata@gmail.com",
-    "Password": "wjxhfezseywocvfo"
+    "Password": "zgncvoncahuerjxt"
   },
   "PaginationSettings": {
     "bookingByIdPageSize": 3,
