--- a/Cyberpalata.Website/cyberpalata-web/package.json
+++ b/Cyberpalata.Website/cyberpalata-web/package.json
@@ -11,6 +11,8 @@
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.3",
     "jwt-decode": "^3.1.2",
+    "mobx": "^6.7.0",
+    "mobx-react-lite": "^3.4.0",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
