--- a/Cyberpalata.WebApi/nlog.config
+++ b/Cyberpalata.WebApi/nlog.config
@@ -9,49 +9,30 @@
 
   <extensions>
     <add assembly="NLog.Web.AspNetCore"/>
-    <!--<add assembly="NLog.MailKit"/>-->
-    <!--<add assembly="Npgsql.EntityFrameworkCore.PostgreSQL"/>-->
-    <!--<add assembly="Microsoft.EntityFrameworkCore.Sqlite.Core"/>-->
   </extensions>
-
-
-  <targets>
-    <!--Можно разделять по файлам-->      
-    <!--<target xsi:type="File" name="fileLogTrace" fileName="${logDirectory}/nlog-all-${shortdate}.log" deleteOldFileOnStartup="true" concurrentWrites="true" />
+  <targets>  
+    <target xsi:type="File" name="fileLogTrace" fileName="${logDirectory}/nlog-all-${shortdate}.log" deleteOldFileOnStartup="true" concurrentWrites="true" />
     <target xsi:type="File" name="fileLogDebug" fileName="${logDirectory}/nlog-all-${shortdate}.log" deleteOldFileOnStartup="true" concurrentWrites="true" />
     <target xsi:type="File" name="fileLogInfo" fileName="${logDirectory}/nlog-all-${shortdate}.log" deleteOldFileOnStartup="true" concurrentWrites="true" />
     <target xsi:type="File" name="fileLogWarn" fileName="${logDirectory}/nlog-all-${shortdate}.log" deleteOldFileOnStartup="true" concurrentWrites="true" />
     <target xsi:type="File" name="fileLogErrors" fileName="${logDirectory}/nlog-all-${shortdate}.log" deleteOldFileOnStartup="true" concurrentWrites="true" />
-    <target xsi:type="File" name="fileLogFatal" fileName="${logDirectory}/nlog-all-${shortdate}.log" deleteOldFileOnStartup="true" concurrentWrites="true" />-->
+    <target xsi:type="File" name="fileLogFatal" fileName="${logDirectory}/nlog-all-${shortdate}.log" deleteOldFileOnStartup="true" concurrentWrites="true" />
  
-    <!--Запись в файл-->  
-    <!--<target xsi:type="File" name="allfile"
-            fileName="${logDirectory}/nlog-all-${shortdate}.log" deleteOldFileOnStartup="true" concurrentWrites="true" />-->
+    <target xsi:type="File" name="allfile"
+            fileName="${logDirectory}/nlog-all-${shortdate}.log" deleteOldFileOnStartup="true" concurrentWrites="true" />
 
-    <!--Запись в порт-->  
     <target xsi:type="NLogViewer" name="TcpOutlet" address="tcp4://localhost:4505" />
 
   </targets>
 
-  <rules>
-    <!--Можно разделять по файлам-->  
+  <rules> 
     <logger name="*" level="Trace" writeTo="fileLogTrace" />
     <logger name="*" level="Debug" writeTo="fileLogDebug" />
     <logger name="*" level="Info" writeTo="fileLogInfo" />
     <logger name="*" level="Warn" writeTo="fileLogWarn" />
     <logger name="*" level="Error" writeTo="fileLogErrors" />
     <logger name="*" level="Fatal" writeTo="fileLogFatal" />
-
-    <!--На почту-->  
-    <!--<logger name="*" level="Error" writeTo="mail" />-->    
-    
-    <!--В Порт-->  
     <logger name="*" minlevel="Trace" writeTo="TcpOutlet">
-      <!--<filters>
-        <when condition="contains(logger, 'что-то')" action="Log" />
-        <when condition="contains(logger, 'что-то')" action="Ignore" />
-      </filters>-->
-    </logger>
-    
+    </logger> 
   </rules>
 </nlog>
