--- a/Cyberpalata.Website/cyberpalata-web/package.json
+++ b/Cyberpalata.Website/cyberpalata-web/package.json
@@ -7,10 +7,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tsconfig/node16": "^1.0.3",
     "@types/bootstrap": "^5.2.6",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.13.0",
-    "@types/react": "^18.0.27",
+    "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
     "@types/typescript": "^2.0.0",
     "@typescript-eslint/parser": "^5.51.0",
@@ -19,7 +20,7 @@
     "core-types-ts": "^3.4.0",
     "jquery": "^3.6.3",
     "jwt-decode": "^3.1.2",
-    "mobx": "^6.7.0",
+    "mobx": "^6.8.0",
     "mobx-react-lite": "^3.4.0",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
@@ -27,7 +28,7 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-fragment": "^1.0.0",
-    "react-router-dom": "^6.6.1",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.1",
@@ -63,6 +64,7 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/react-router-dom": "^5.3.3",
     "babel-eslint": "^10.1.0",
     "css-loader": "^6.7.3",
     "eslint": "8.2.0",
