--- a/Cyberpalata.Website/cyberpalata-web/package.json
+++ b/Cyberpalata.Website/cyberpalata-web/package.json
@@ -28,6 +28,7 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-fragment": "^1.0.0",
+    "react-jsx": "^1.0.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
