--- a/Cyberpalata.Website/cyberpalata-web/package.json
+++ b/Cyberpalata.Website/cyberpalata-web/package.json
@@ -33,6 +33,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.1",
+    "sass-loader": "^13.2.0",
     "ts-loader": "^9.4.2",
     "ts-migrate": "^0.1.35",
     "web-vitals": "^2.1.4"
