--- a/Cyberpalata.WebApi/appsettings.json
+++ b/Cyberpalata.WebApi/appsettings.json
@@ -23,7 +23,7 @@
   },
   "EmailSettings": {
     "EmailAddress": "cyberpalata@gmail.com",
-    "Password": "zjcazqjquohonbxx"
+    "Password": "vseekowzibctrtdt"
   },
   "PaginationSettings": {
     "bookingByIdPageSize": 3,
@@ -33,5 +33,6 @@
   "BookingSettings": {
     "BookingMaxMakingAheadDays": 14
   },
-  "PasswordResetPageUrl": "http://localhost:3000/passwordReset"
+  "PasswordResetPageUrl": "http://localhost:3000/passwordReset",
+  "ConfirmTeamComing": "http://dotnetinternship2022.norwayeast.cloudapp.azure.com:9000/"
 }
