--- a/Cyberpalata.Website/cyberpalata-web/package.json
+++ b/Cyberpalata.Website/cyberpalata-web/package.json
@@ -23,12 +23,14 @@
     "mobx": "^6.8.0",
     "mobx-react-lite": "^3.4.0",
     "popper.js": "^1.16.1",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-500": "^1.0.1",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-fragment": "^1.0.0",
     "react-jsx": "^1.0.0",
+    "react-qr-code": "^2.0.11",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
