--- a/Cyberpalata.Website/cyberpalata-web/package.json
+++ b/Cyberpalata.Website/cyberpalata-web/package.json
@@ -9,9 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "@tsconfig/node16": "^1.0.3",
     "@types/bootstrap": "^5.2.6",
+    "@types/d3": "^7.4.0",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.28",
+    "@types/react-d3-graph": "^2.6.3",
     "@types/react-dom": "^18.0.10",
     "@types/typescript": "^2.0.0",
     "@typescript-eslint/parser": "^5.51.0",
@@ -27,6 +29,9 @@
     "react": "^18.2.0",
     "react-500": "^1.0.1",
     "react-bootstrap": "^2.7.0",
+    "react-d3-library": "^1.1.8",
+    "react-d3-tree": "^3.5.0",
+    "react-d3-tree-advanced": "^1.13.2",
     "react-dom": "^18.2.0",
     "react-fragment": "^1.0.0",
     "react-jsx": "^1.0.0",
@@ -74,6 +79,7 @@
     "eslint": "8.2.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-prettier": "^4.2.1",
