--- a/Cyberpalata.ViewModel/Cyberpalata.ViewModel.csproj
+++ b/Cyberpalata.ViewModel/Cyberpalata.ViewModel.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
   </ItemGroup>
