--- a/Cyberpalata.Logic/Cyberpalata.Logic.csproj
+++ b/Cyberpalata.Logic/Cyberpalata.Logic.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AuthorizeNet" Version="2.0.3" />
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="CSharpFunctionalExtensions" Version="2.37.0" />
